--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-Hello World
+Telegram: @Sabbaka
+Facebook: https://www.facebook.com/profile.php?id=100082676982816
+Instagram: https://www.instagram.com/krutatusa/
+TikTok: https://www.tiktok.com/@krutatusa
