--- a/index.html
+++ b/index.html
@@ -1,4 +1,68 @@
-Telegram: @Sabbaka
-Facebook: https://www.facebook.com/profile.php?id=100082676982816
-Instagram: https://www.instagram.com/krutatusa/
-TikTok: https://www.tiktok.com/@krutatusa
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kirill Glebov - Senior Software Engineer</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 20px;
+        }
+        section {
+            margin: 20px;
+        }
+        h1, h2 {
+            margin: 10px;
+        }
+        a {
+            color: #333;
+            text-decoration: none;
+        }
+        footer {
+            margin-top: 30px;
+            color: gray;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Kirill Glebov</h1>
+    <p>Senior Software Engineer</p>
+</header>
+
+<section>
+    <h2>Experience</h2>
+    <p>Freelance | Outreach.io | Broadcom | Red Hat</p>
+    <p>Specializing in Node.js, React, GraphQL, Golang, and more.</p>
+</section>
+
+<section>
+    <h2>Projects & Skills</h2>
+    <p>Backend Microservices, Admin Experience, Apollo GraphQL, Docker, Kubernetes</p>
+    <p>Lead developer in multiple projects, team management, mentoring juniors.</p>
+</section>
+
+<section>
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:kgliebov@gmail.com">kgliebov@gmail.com</a></p>
+    <p>GitHub (Work): <a href="https://github.com/kirillglebov-outreach">kirillglebov-outreach</a></p>
+    <p>GitHub (Personal): <a href="https://github.com/sabbaka">sabbaka</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/kglebov">linkedin.com/in/kglebov</a></p>
+</section>
+
+<footer>
+    <p>© 2024 Kirill Glebov</p>
+</footer>
+
+</body>
+</html>
