--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <title>Kirill Glebov - Senior Software Engineer</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            font-family: monospace;
+            background-color: black;
+            color: limegreen;
             margin: 0;
             padding: 0;
             text-align: center;
         }
-        header {
-            background-color: #333;
-            color: white;
-            padding: 20px;
+        a {
+            color: limegreen;
+            text-decoration: underline;
         }
         section {
             margin: 20px;
@@ -23,13 +23,9 @@
         h1, h2 {
             margin: 10px;
         }
-        a {
-            color: #333;
-            text-decoration: none;
-        }
         footer {
             margin-top: 30px;
-            color: gray;
+            color: limegreen;
         }
     </style>
 </head>
@@ -42,14 +38,22 @@
 
 <section>
     <h2>Experience</h2>
-    <p>Freelance | Outreach.io | Broadcom | Red Hat</p>
-    <p>Specializing in Node.js, React, GraphQL, Golang, and more.</p>
+    <p>Freelance | Outreach.io | Broadcom | Red Hat | Speedflow</p>
+    <p>Specializing in Node.js, React, GraphQL, Golang, TypeScript, Python, PHP, Ruby, and more.</p>
 </section>
 
 <section>
     <h2>Projects & Skills</h2>
     <p>Backend Microservices, Admin Experience, Apollo GraphQL, Docker, Kubernetes</p>
+    <p>Extensive front-end development experience with React, Angular, and modern web technologies.</p>
     <p>Lead developer in multiple projects, team management, mentoring juniors.</p>
+    <p>Founder of a private World of Warcraft server project, which became a successful business.</p>
+</section>
+
+<section>
+    <h2>Education</h2>
+    <p>Bachelor of Information Technical Protection Systems</p>
+    <p>National Aviation University, Kyiv, Ukraine, February 2013</p>
 </section>
 
 <section>
