--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
             color: limegreen;
             margin: 0;
             padding: 0;
-            text-align: center;
         }
         a {
             color: limegreen;
@@ -19,13 +18,17 @@
         }
         section {
             margin: 20px;
+            text-align: left;
         }
         h1, h2 {
             margin: 10px;
+            text-align: left;
         }
         footer {
             margin-top: 30px;
             color: limegreen;
+            text-align: left;
+            padding-left: 20px;
         }
     </style>
 </head>
