--- a/index.html
+++ b/index.html
@@ -12,23 +12,27 @@
             margin: 0;
             padding: 0;
         }
-        a {
-            color: limegreen;
-            text-decoration: underline;
-        }
-        section {
-            margin: 20px;
-            text-align: left;
+        header, section, footer {
+            margin-left: 20px;
         }
         h1, h2 {
-            margin: 10px;
-            text-align: left;
+            color: limegreen;
+            border-bottom: 1px solid limegreen;
+            display: inline-block;
+            padding-bottom: 5px;
+        }
+        p {
+            margin: 5px 0;
+        }
+        a {
+            color: limegreen;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
         }
         footer {
             margin-top: 30px;
-            color: limegreen;
-            text-align: left;
-            padding-left: 20px;
         }
     </style>
 </head>
@@ -40,35 +44,35 @@
 </header>
 
 <section>
-    <h2>Experience</h2>
-    <p>Freelance | Outreach.io | Broadcom | Red Hat | Speedflow</p>
-    <p>Specializing in Node.js, React, GraphQL, Golang, TypeScript, Python, PHP, Ruby, and more.</p>
+    <h2>Professional Experience</h2>
+    <p>👾 Freelance Developer | Outreach.io | Broadcom | Red Hat | Speedflow</p>
+    <p>🔧 Mastering the craft of TypeScript, Python, PHP, Ruby, and Golang.</p>
+    <p>💻 Expert in frameworks like Node.js, React, GraphQL, Apollo, and Docker.</p>
 </section>
 
 <section>
-    <h2>Projects & Skills</h2>
-    <p>Backend Microservices, Admin Experience, Apollo GraphQL, Docker, Kubernetes</p>
-    <p>Extensive front-end development experience with React, Angular, and modern web technologies.</p>
-    <p>Lead developer in multiple projects, team management, mentoring juniors.</p>
-    <p>Founder of a private World of Warcraft server project, which became a successful business.</p>
+    <h2>Skills & Projects</h2>
+    <p>🚀 Microservices Architect | Apollo GraphQL Enthusiast | Docker & Kubernetes Pro</p>
+    <p>💻 Full-stack expertise with front-end precision: React & Angular specialist.</p>
+    <p>🎮 Founded a thriving World of Warcraft private server—handled both infrastructure and dynamic gameplay systems.</p>
 </section>
 
 <section>
     <h2>Education</h2>
-    <p>Bachelor of Information Technical Protection Systems</p>
-    <p>National Aviation University, Kyiv, Ukraine, February 2013</p>
+    <p>🎓 Bachelor of Information Technical Protection Systems</p>
+    <p>🏫 National Aviation University, Kyiv, Ukraine (2013)</p>
 </section>
 
 <section>
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:kgliebov@gmail.com">kgliebov@gmail.com</a></p>
-    <p>GitHub (Work): <a href="https://github.com/kirillglebov-outreach">kirillglebov-outreach</a></p>
-    <p>GitHub (Personal): <a href="https://github.com/sabbaka">sabbaka</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/kglebov">linkedin.com/in/kglebov</a></p>
+    <p>📧 Email: <a href="mailto:kgliebov@gmail.com">kgliebov@gmail.com</a></p>
+    <p>💻 GitHub (Work): <a href="https://github.com/kirillglebov-outreach">kirillglebov-outreach</a></p>
+    <p>💻 GitHub (Personal): <a href="https://github.com/sabbaka">sabbaka</a></p>
+    <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/kglebov">linkedin.com/in/kglebov</a></p>
 </section>
 
 <footer>
-    <p>© 2024 Kirill Glebov</p>
+    <p>🖥️ © 2024 Kirill Glebov | Code is Life | </p>
 </footer>
 
 </body>
