--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kirill Glebov - Senior Software Engineer</title>
+    
+    <!-- SEO Enhancements -->
+    <meta name="description" content="Kirill Glebov is a Senior Software Engineer specializing in TypeScript, Python, PHP, Ruby, and Golang. Full-stack development experience with Node.js, React, GraphQL, Docker, and more.">
+    <meta name="keywords" content="Senior Software Engineer, Full-stack developer, Node.js, React, Golang, TypeScript, GraphQL, Docker, Kubernetes, Freelance Developer, Kirill Glebov">
+    <meta name="author" content="Kirill Glebov">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Kirill Glebov - Senior Software Engineer">
+    <meta property="og:description" content="Kirill Glebov specializes in full-stack development with Node.js, React, GraphQL, Golang, and more. Extensive front-end and back-end experience in software engineering.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.linkedin.com/in/kglebov">
+    <meta property="og:image" content="profile-image.jpg">
+    
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+    <!-- CSS Styles -->
     <style>
         body {
             font-family: monospace;
