--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
 </section>
 
 <section>
-    <h2>Education</h2>
+    <h2>Education & Certifications</h2>
     <p>🎓 Bachelor of Information Technical Protection Systems</p>
     <p>🏫 National Aviation University, Kyiv, Ukraine (2013)</p>
+    <p>📜 IELTS Certification, August 2018, Score: 8.0</p>
 </section>
 
 <section>
