--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Kirill Glebov - Senior Software Engineer</title>
     
     <!-- SEO Enhancements -->
-    <meta name="description" content="Kirill Glebov is a Senior Software Engineer specializing in TypeScript, Python, PHP, Ruby, and Golang. Full-stack development experience with Node.js, React, GraphQL, Docker, and more.">
+    <meta name="description" content="Kirill Glebov is a Senior Software Engineer with expertise in TypeScript, Python, PHP, Ruby, and Golang. Full-stack developer with hands-on experience in Node.js, React, GraphQL, Docker, and more.">
     <meta name="keywords" content="Senior Software Engineer, Full-stack developer, Node.js, React, Golang, TypeScript, GraphQL, Docker, Kubernetes, Freelance Developer, Kirill Glebov">
     <meta name="author" content="Kirill Glebov">
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Kirill Glebov - Senior Software Engineer">
-    <meta property="og:description" content="Kirill Glebov specializes in full-stack development with Node.js, React, GraphQL, Golang, and more. Extensive front-end and back-end experience in software engineering.">
+    <meta property="og:description" content="Kirill Glebov specializes in full-stack development with Node.js, React, GraphQL, Golang, and more. Hands-on experience in building scalable solutions.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.linkedin.com/in/kglebov">
     <meta property="og:image" content="profile-image.jpg">
@@ -62,15 +62,15 @@
 <section>
     <h2>Professional Experience</h2>
     <p>👾 Freelance Developer | Outreach.io | Broadcom | Red Hat | Speedflow</p>
-    <p>🔧 Mastering the craft of TypeScript, Python, PHP, Ruby, and Golang.</p>
-    <p>💻 Expert in frameworks like Node.js, React, GraphQL, Apollo, and Docker.</p>
+    <p>🔧 Coding in TypeScript, Python, PHP, Ruby, and Golang to build scalable, maintainable solutions.</p>
+    <p>💻 Hands-on with Node.js, React, GraphQL, Apollo, and Docker, turning ideas into reality.</p>
 </section>
 
 <section>
     <h2>Skills & Projects</h2>
-    <p>🚀 Microservices Architect | Apollo GraphQL Enthusiast | Docker & Kubernetes Pro</p>
-    <p>💻 Full-stack expertise with front-end precision: React & Angular specialist.</p>
-    <p>🎮 Founded a thriving World of Warcraft private server—handled both infrastructure and dynamic gameplay systems.</p>
+    <p>🚀 Built and optimized microservices | Developed full-stack apps with real-world impact</p>
+    <p>💻 Front-end expert: React & Angular | Smooth UI/UX for dynamic applications.</p>
+    <p>🎮 Created a World of Warcraft private server—managed all aspects from code to community.</p>
 </section>
 
 <section>
@@ -89,7 +89,7 @@
 </section>
 
 <footer>
-    <p>🖥️ © 2024 Kirill Glebov | Code is Life | </p>
+    <p>🖥️ © 2024 Kirill Glebov | Making Ideas Work | </p>
 </footer>
 
 </body>
