--- a/index.html
+++ b/index.html
@@ -4,93 +4,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kirill Glebov - Senior Software Engineer</title>
-    
+
     <!-- SEO Enhancements -->
-    <meta name="description" content="Kirill Glebov is a Senior Software Engineer with expertise in TypeScript, Python, PHP, Ruby, and Golang. Full-stack developer with hands-on experience in Node.js, React, GraphQL, Docker, and more.">
-    <meta name="keywords" content="Senior Software Engineer, Full-stack developer, Node.js, React, Golang, TypeScript, GraphQL, Docker, Kubernetes, Freelance Developer, Kirill Glebov">
+    <meta name="description" content="Kirill Glebov, Senior Software Engineer. Skilled in TypeScript, Python, PHP, Ruby, Golang. Full-stack developer with hands-on experience in Node.js, React, GraphQL, Docker, and more.">
+    <meta name="keywords" content="Senior Software Engineer, Golang, React Developer, TypeScript Engineer, Full-stack developer, Node.js, Kubernetes, Freelance Developer, Kirill Glebov">
     <meta name="author" content="Kirill Glebov">
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Kirill Glebov - Senior Software Engineer">
-    <meta property="og:description" content="Kirill Glebov specializes in full-stack development with Node.js, React, GraphQL, Golang, and more. Hands-on experience in building scalable solutions.">
+    <meta property="og:description" content="Kirill Glebov specializes in full-stack development using Node.js, React, GraphQL, Golang, and more. Extensive front-end and back-end experience.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.linkedin.com/in/kglebov">
     <meta property="og:image" content="profile-image.jpg">
-    
+
+    <!-- Structured Data for SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Kirill Glebov",
+      "jobTitle": "Senior Software Engineer",
+      "url": "https://www.linkedin.com/in/kglebov",
+      "sameAs": [
+        "https://github.com/kirillglebov-outreach",
+        "https://github.com/sabbaka",
+        "mailto:kgliebov@gmail.com"
+      ],
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Freelance, Outreach.io, Broadcom, Red Hat, Speedflow"
+      },
+      "alumniOf": {
+        "@type": "CollegeOrUniversity",
+        "name": "National Aviation University"
+      }
+    }
+    </script>
+
     <!-- Favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <!-- CSS Styles -->
     <style>
         body {
-            font-family: monospace;
-            background-color: black;
-            color: limegreen;
+            font-family: 'Roboto', monospace;
+            background-color: #111;
+            color: #00ff7f;
             margin: 0;
             padding: 0;
         }
         header, section, footer {
             margin-left: 20px;
+            padding: 10px;
         }
         h1, h2 {
-            color: limegreen;
-            border-bottom: 1px solid limegreen;
+            color: #00ff7f;
+            border-bottom: 1px solid #00ff7f;
             display: inline-block;
             padding-bottom: 5px;
         }
         p {
-            margin: 5px 0;
+            margin: 10px 0;
+            line-height: 1.6;
         }
         a {
-            color: limegreen;
+            color: #00ff7f;
             text-decoration: none;
         }
         a:hover {
             text-decoration: underline;
-        }
-        footer {
-            margin-top: 30px;
-        }
-    </style>
-</head>
-<body>
-
-<header>
-    <h1>Kirill Glebov</h1>
-    <p>Senior Software Engineer</p>
-</header>
-
-<section>
-    <h2>Professional Experience</h2>
-    <p>👾 Freelance Developer | Outreach.io | Broadcom | Red Hat | Speedflow</p>
-    <p>🔧 Coding in TypeScript, Python, PHP, Ruby, and Golang to build scalable, maintainable solutions.</p>
-    <p>💻 Hands-on with Node.js, React, GraphQL, Apollo, and Docker, turning ideas into reality.</p>
-</section>
-
-<section>
-    <h2>Skills & Projects</h2>
-    <p>🚀 Built and optimized microservices | Developed full-stack apps with real-world impact</p>
-    <p>💻 Front-end expert: React & Angular | Smooth UI/UX for dynamic applications.</p>
-    <p>🎮 Created a World of Warcraft private server—managed all aspects from code to community.</p>
-</section>
-
-<section>
-    <h2>Education & Certifications</h2>
-    <p>🎓 Bachelor of Information Technical Protection Systems</p>
-    <p>🏫 National Aviation University, Kyiv, Ukraine (2013)</p>
-    <p>📜 IELTS Certification, August 2018, Score: 8.0</p>
-</section>
-
-<section>
-    <h2>Contact</h2>
-    <p>📧 Email: <a href="mailto:kgliebov@gmail.com">kgliebov@gmail.com</a></p>
-    <p>💻 GitHub (Work): <a href="https://github.com/kirillglebov-outreach">kirillglebov-outreach</a></p>
-    <p>💻 GitHub (Personal): <a href="https://github.com/sabbaka">sabbaka</a></p>
-    <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/kglebov">linkedin.com/in/kglebov</a></p>
-</section>
-
-<footer>
-    <p>🖥️ © 2024 Kirill Glebov | Making Ideas Work | </p>
-</footer>
-
-</body>
-</html>
