--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Kirill Glebov - Senior Software Engineer</title>
 
     <!-- SEO Enhancements -->
-    <meta name="description" content="Kirill Glebov, Senior Software Engineer. Skilled in TypeScript, Python, PHP, Ruby, Golang. Full-stack developer with hands-on experience in Node.js, React, GraphQL, Docker, and more.">
-    <meta name="keywords" content="Senior Software Engineer, Golang, React Developer, TypeScript Engineer, Full-stack developer, Node.js, Kubernetes, Freelance Developer, Kirill Glebov">
+    <meta name="description" content="Kirill Glebov, Senior Software Engineer with experience in full-stack development using Golang, React, Node.js, and Kubernetes. Proven track record in building scalable, secure solutions.">
+    <meta name="keywords" content="Senior Software Engineer, Golang Developer, React Engineer, Node.js Developer, Kubernetes Expert, Full-stack, Freelance Developer, Kirill Glebov">
     <meta name="author" content="Kirill Glebov">
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Kirill Glebov - Senior Software Engineer">
-    <meta property="og:description" content="Kirill Glebov specializes in full-stack development using Node.js, React, GraphQL, Golang, and more. Extensive front-end and back-end experience.">
+    <meta property="og:description" content="Full-stack developer with expertise in Node.js, React, GraphQL, Docker, Kubernetes, and Golang. Extensive experience in delivering impactful, scalable solutions.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.linkedin.com/in/kglebov">
     <meta property="og:image" content="profile-image.jpg">
@@ -46,24 +46,26 @@
     <!-- CSS Styles -->
     <style>
         body {
-            font-family: 'Roboto', monospace;
+            font-family: 'Roboto', sans-serif;
             background-color: #111;
             color: #00ff7f;
             margin: 0;
             padding: 0;
         }
         header, section, footer {
-            margin-left: 20px;
-            padding: 10px;
+            margin-left: 30px;
+            padding: 20px;
+            line-height: 1.8;
         }
         h1, h2 {
+            font-family: 'Montserrat', sans-serif;
             color: #00ff7f;
             border-bottom: 1px solid #00ff7f;
-            display: inline-block;
             padding-bottom: 5px;
+            margin-bottom: 15px;
         }
         p {
-            margin: 10px 0;
+            margin: 15px 0;
             line-height: 1.6;
         }
         a {
@@ -72,3 +74,61 @@
         }
         a:hover {
             text-decoration: underline;
+        }
+        section {
+            padding: 30px;
+            border: 1px solid #00ff7f;
+            margin-bottom: 30px;
+        }
+        footer {
+            margin-top: 50px;
+            color: #00ff7f;
+            text-align: center;
+        }
+    </style>
+
+    <!-- Font for improved readability -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@600&display=swap" rel="stylesheet">
+</head>
+<body>
+
+<header>
+    <h1>Kirill Glebov</h1>
+    <p>Senior Software Engineer</p>
+</header>
+
+<section>
+    <h2>Professional Experience</h2>
+    <p>👾 Freelance Developer | Outreach.io | Broadcom | Red Hat | Speedflow</p>
+    <p>🔧 Coding in TypeScript, Python, PHP, Ruby, and Golang to build scalable, maintainable solutions.</p>
+    <p>💻 Hands-on with Node.js, React, GraphQL, Apollo, and Docker, delivering real-world impact.</p>
+</section>
+
+<section>
+    <h2>Skills & Projects</h2>
+    <p>🚀 Built and optimized microservices | Developed full-stack apps with tangible business outcomes</p>
+    <p>💻 Front-end expert: React & Angular | Building intuitive UI/UX for modern applications.</p>
+    <p>🎮 Created a World of Warcraft private server—managing everything from infrastructure to community.</p>
+</section>
+
+<section>
+    <h2>Education & Certifications</h2>
+    <p>🎓 Bachelor of Information Technical Protection Systems</p>
+    <p>🏫 National Aviation University, Kyiv, Ukraine (2013)</p>
+    <p>📜 IELTS Certification, August 2018, Score: 8.0</p>
+</section>
+
+<section>
+    <h2>Contact</h2>
+    <p>📧 Email: <a href="mailto:kgliebov@gmail.com">kgliebov@gmail.com</a></p>
+    <p>💻 GitHub (Work): <a href="https://github.com/kirillglebov-outreach">kirillglebov-outreach</a></p>
+    <p>💻 GitHub (Personal): <a href="https://github.com/sabbaka">sabbaka</a></p>
+    <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/kglebov">linkedin.com/in/kglebov</a></p>
+</section>
+
+<footer>
+    <p>🖥️ © 2024 Kirill Glebov | Making Ideas Work | </p>
+</footer>
+
+</body>
+</html>
