--- a/index.html
+++ b/index.html
@@ -6,15 +6,23 @@
     <title>Kirill Glebov - Senior Software Engineer</title>
 
     <!-- SEO Enhancements -->
-    <meta name="description" content="Kirill Glebov, Senior Software Engineer with experience in full-stack development using Golang, React, Node.js, and Kubernetes. Proven track record in building scalable, secure solutions.">
-    <meta name="keywords" content="Senior Software Engineer, Golang Developer, React Engineer, Node.js Developer, Kubernetes Expert, Full-stack, Freelance Developer, Kirill Glebov">
+    <meta name="description" content="Kirill Glebov, Senior Software Engineer with full-stack expertise in Golang, React, Node.js, and Kubernetes. Building scalable solutions for modern businesses.">
+    <meta name="keywords" content="Senior Software Engineer, Golang, React, Node.js, Kubernetes, Full-stack developer, Freelance Developer, Kirill Glebov, scalable solutions, cloud technologies">
     <meta name="author" content="Kirill Glebov">
     <meta name="robots" content="index, follow">
+
+    <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Kirill Glebov - Senior Software Engineer">
-    <meta property="og:description" content="Full-stack developer with expertise in Node.js, React, GraphQL, Docker, Kubernetes, and Golang. Extensive experience in delivering impactful, scalable solutions.">
+    <meta property="og:description" content="Experienced in full-stack development with Golang, React, and Node.js. Building cutting-edge, scalable solutions.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.linkedin.com/in/kglebov">
     <meta property="og:image" content="profile-image.jpg">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Kirill Glebov - Senior Software Engineer">
+    <meta name="twitter:description" content="Expert in Golang, React, and Kubernetes. Full-stack development for scalable, modern applications.">
+    <meta name="twitter:image" content="profile-image.jpg">
 
     <!-- Structured Data for SEO -->
     <script type="application/ld+json">
@@ -48,7 +56,7 @@
         body {
             font-family: 'Roboto', sans-serif;
             background-color: #111;
-            color: #00ff7f;
+            color: #00b36b;
             margin: 0;
             padding: 0;
         }
@@ -60,29 +68,37 @@
         h1, h2 {
             font-family: 'Montserrat', sans-serif;
             color: #00ff7f;
-            border-bottom: 1px solid #00ff7f;
-            padding-bottom: 5px;
-            margin-bottom: 15px;
+            border-bottom: 2px solid #00ff7f;
+            padding-bottom: 10px;
+            margin-bottom: 25px;
+            font-size: 1.8rem;
         }
         p {
             margin: 15px 0;
-            line-height: 1.6;
+            line-height: 1.8;
         }
         a {
             color: #00ff7f;
             text-decoration: none;
+            transition: color 0.3s ease;
         }
         a:hover {
+            color: #66ff99;
             text-decoration: underline;
         }
         section {
-            padding: 30px;
-            border: 1px solid #00ff7f;
-            margin-bottom: 30px;
+            padding: 40px;
+            border: 2px solid #00b36b;
+            border-radius: 8px;
+            margin-bottom: 40px;
+            transition: background-color 0.3s ease;
+        }
+        section:hover {
+            background-color: #222;
         }
         footer {
             margin-top: 50px;
-            color: #00ff7f;
+            color: #00b36b;
             text-align: center;
         }
     </style>
@@ -100,15 +116,15 @@
 <section>
     <h2>Professional Experience</h2>
     <p>👾 Freelance Developer | Outreach.io | Broadcom | Red Hat | Speedflow</p>
-    <p>🔧 Coding in TypeScript, Python, PHP, Ruby, and Golang to build scalable, maintainable solutions.</p>
-    <p>💻 Hands-on with Node.js, React, GraphQL, Apollo, and Docker, delivering real-world impact.</p>
+    <p>🔧 Developing scalable, maintainable solutions using TypeScript, Python, PHP, Ruby, and Golang.</p>
+    <p>💻 Building real-world applications with Node.js, React, GraphQL, Apollo, and Docker.</p>
 </section>
 
 <section>
     <h2>Skills & Projects</h2>
-    <p>🚀 Built and optimized microservices | Developed full-stack apps with tangible business outcomes</p>
-    <p>💻 Front-end expert: React & Angular | Building intuitive UI/UX for modern applications.</p>
-    <p>🎮 Created a World of Warcraft private server—managing everything from infrastructure to community.</p>
+    <p>🚀 Optimized microservices architecture | Full-stack applications with measurable business results</p>
+    <p>💻 Front-end expert: React & Angular | Creating seamless UI/UX for modern applications.</p>
+    <p>🎮 Created a World of Warcraft private server—leading development from code to community management.</p>
 </section>
 
 <section>
