--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>Kirill Glebov - Senior Software Engineer</title>
 
     <!-- SEO Enhancements -->
-    <meta name="description" content="Kirill Glebov, Senior Software Engineer with full-stack expertise in Golang, React, Node.js, and Kubernetes. Building scalable solutions for modern businesses.">
-    <meta name="keywords" content="Senior Software Engineer, Golang, React, Node.js, Kubernetes, Full-stack developer, Freelance Developer, Kirill Glebov, scalable solutions, cloud technologies">
+    <meta name="description" content="Kirill Glebov, Senior Software Engineer with expertise in full-stack development, Golang, React, Node.js, Kubernetes, and scalable cloud technologies.">
+    <meta name="keywords" content="Senior Software Engineer, Golang, React, Node.js, Kubernetes, Full-stack developer, Freelance Developer, Kirill Glebov, scalable solutions">
     <meta name="author" content="Kirill Glebov">
     <meta name="robots" content="index, follow">
 
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Kirill Glebov - Senior Software Engineer">
-    <meta property="og:description" content="Experienced in full-stack development with Golang, React, and Node.js. Building cutting-edge, scalable solutions.">
+    <meta property="og:description" content="Building scalable cloud-based solutions with Golang, React, and Node.js.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.linkedin.com/in/kglebov">
     <meta property="og:image" content="profile-image.jpg">
@@ -21,7 +21,7 @@
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Kirill Glebov - Senior Software Engineer">
-    <meta name="twitter:description" content="Expert in Golang, React, and Kubernetes. Full-stack development for scalable, modern applications.">
+    <meta name="twitter:description" content="Expert in Golang, React, and Kubernetes. Full-stack developer building modern, scalable applications.">
     <meta name="twitter:image" content="profile-image.jpg">
 
     <!-- Structured Data for SEO -->
@@ -55,76 +55,87 @@
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background-color: #111;
-            color: #00b36b;
+            background-color: #0d0d0d;
+            color: #d4f4dd;
             margin: 0;
             padding: 0;
         }
         header, section, footer {
-            margin-left: 30px;
-            padding: 20px;
+            margin-left: auto;
+            margin-right: auto;
+            padding: 40px;
+            max-width: 1200px;
             line-height: 1.8;
         }
         h1, h2 {
             font-family: 'Montserrat', sans-serif;
-            color: #00ff7f;
-            border-bottom: 2px solid #00ff7f;
-            padding-bottom: 10px;
+            color: #56db70;
+            font-weight: bold;
             margin-bottom: 25px;
-            font-size: 1.8rem;
+            font-size: 2rem;
+        }
+        h2 {
+            font-size: 1.6rem;
+            margin-top: 40px;
         }
         p {
             margin: 15px 0;
-            line-height: 1.8;
+            font-size: 1.1rem;
+            color: #9df3c4;
         }
         a {
-            color: #00ff7f;
+            color: #56db70;
             text-decoration: none;
             transition: color 0.3s ease;
         }
         a:hover {
-            color: #66ff99;
+            color: #9df3c4;
             text-decoration: underline;
         }
         section {
             padding: 40px;
-            border: 2px solid #00b36b;
-            border-radius: 8px;
+            border: 2px solid #56db70;
+            border-radius: 10px;
             margin-bottom: 40px;
-            transition: background-color 0.3s ease;
+            transition: all 0.3s ease;
+            background: linear-gradient(145deg, #0d0d0d 60%, #111111);
         }
         section:hover {
-            background-color: #222;
+            transform: translateY(-5px);
+            box-shadow: 0px 4px 15px rgba(86, 219, 112, 0.3);
         }
         footer {
             margin-top: 50px;
-            color: #00b36b;
             text-align: center;
+            padding: 20px;
+            background-color: #0a0a0a;
+            color: #56db70;
+            font-size: 0.9rem;
         }
     </style>
 
-    <!-- Font for improved readability -->
+    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
 
 <header>
     <h1>Kirill Glebov</h1>
-    <p>Senior Software Engineer</p>
+    <p>Senior Software Engineer | Full-stack Developer</p>
 </header>
 
 <section>
     <h2>Professional Experience</h2>
     <p>👾 Freelance Developer | Outreach.io | Broadcom | Red Hat | Speedflow</p>
-    <p>🔧 Developing scalable, maintainable solutions using TypeScript, Python, PHP, Ruby, and Golang.</p>
-    <p>💻 Building real-world applications with Node.js, React, GraphQL, Apollo, and Docker.</p>
+    <p>🔧 Building scalable, cloud-based solutions using TypeScript, Python, PHP, Ruby, and Golang.</p>
+    <p>💻 Hands-on experience with Node.js, React, GraphQL, Apollo, and Docker.</p>
 </section>
 
 <section>
     <h2>Skills & Projects</h2>
-    <p>🚀 Optimized microservices architecture | Full-stack applications with measurable business results</p>
-    <p>💻 Front-end expert: React & Angular | Creating seamless UI/UX for modern applications.</p>
-    <p>🎮 Created a World of Warcraft private server—leading development from code to community management.</p>
+    <p>🚀 Optimized microservices architecture for scalable solutions | Developed full-stack applications for real-world businesses.</p>
+    <p>💻 Expert in front-end technologies like React & Angular, ensuring intuitive, responsive UI/UX.</p>
+    <p>🎮 Developed a World of Warcraft private server—leading both backend development and community management.</p>
 </section>
 
 <section>
