--- a/index.html
+++ b/index.html
@@ -40,4 +40,121 @@
       "worksFor": {
         "@type": "Organization",
         "name": "Freelance, Outreach.io, Broadcom, Red Hat, Speedflow"
- 
+      },
+      "alumniOf": {
+        "@type": "CollegeOrUniversity",
+        "name": "National Aviation University"
+      }
+    }
+    </script>
+
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+    <!-- CSS Styles -->
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            background-color: #0d0d2b;
+            color: #e0f7fa;
+            margin: 0;
+            padding: 0;
+        }
+        header, section, footer {
+            margin-left: auto;
+            margin-right: auto;
+            padding: 40px;
+            max-width: 1200px;
+            line-height: 1.8;
+        }
+        h1, h2 {
+            font-family: 'Poppins', sans-serif;
+            color: #40c4ff;
+            font-weight: bold;
+            margin-bottom: 25px;
+            font-size: 2.2rem;
+        }
+        h2 {
+            font-size: 1.8rem;
+            margin-top: 40px;
+        }
+        p {
+            margin: 15px 0;
+            font-size: 1.2rem;
+            color: #b3e5fc;
+        }
+        a {
+            color: #40c4ff;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+        a:hover {
+            color: #80d8ff;
+            text-decoration: underline;
+        }
+        section {
+            padding: 40px;
+            border: 2px solid #40c4ff;
+            border-radius: 12px;
+            margin-bottom: 40px;
+            background-color: #16213e;
+            transition: transform 0.2s ease;
+        }
+        section:hover {
+            transform: translateY(-2px);
+        }
+        footer {
+            margin-top: 50px;
+            text-align: center;
+            padding: 20px;
+            background-color: #101629;
+            color: #40c4ff;
+            font-size: 0.95rem;
+        }
+    </style>
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Poppins:wght@600&display=swap" rel="stylesheet">
+</head>
+<body>
+
+<header>
+    <h1>Kirill Glebov</h1>
+    <p>Senior Software Engineer | Full-stack Developer</p>
+</header>
+
+<section>
+    <h2>Professional Experience</h2>
+    <p>👾 Freelance Developer | Outreach.io | Broadcom | Red Hat | Speedflow</p>
+    <p>🔧 Building scalable, cloud-based solutions using TypeScript, Python, PHP, Ruby, and Golang.</p>
+    <p>💻 Hands-on experience with Node.js, React, GraphQL, Apollo, and Docker.</p>
+</section>
+
+<section>
+    <h2>Skills & Projects</h2>
+    <p>🚀 Optimized microservices architecture for scalable solutions | Developed full-stack applications for real-world businesses.</p>
+    <p>💻 Expert in front-end technologies like React & Angular, ensuring intuitive, responsive UI/UX.</p>
+    <p>🎮 Developed a World of Warcraft private server—leading both backend development and community management.</p>
+</section>
+
+<section>
+    <h2>Education & Certifications</h2>
+    <p>🎓 Bachelor of Information Technical Protection Systems</p>
+    <p>🏫 National Aviation University, Kyiv, Ukraine (2013)</p>
+    <p>📜 IELTS Certification, August 2018, Score: 8.0</p>
+</section>
+
+<section>
+    <h2>Contact</h2>
+    <p>📧 Email: <a href="mailto:kgliebov@gmail.com">kgliebov@gmail.com</a></p>
+    <p>💻 GitHub (Work): <a href="https://github.com/kirillglebov-outreach">kirillglebov-outreach</a></p>
+    <p>💻 GitHub (Personal): <a href="https://github.com/sabbaka">sabbaka</a></p>
+    <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/kglebov">linkedin.com/in/kglebov</a></p>
+</section>
+
+<footer>
+    <p>🖥️ © 2024 Kirill Glebov | Building Tomorrow's Tech | </p>
+</footer>
+
+</body>
+</html>
